--- a/app/views/index.html
+++ b/app/views/index.html
@@ -56,6 +56,7 @@
       <li><a href="/Set_Up_A_Direct_Debit/v3/communication_preferences">Communication preferences</a> only appears if email address provided</li>
       <li>Payment date is now on <a href="/Set_Up_A_Direct_Debit/v3/DD_date">its own screen</a> to provide clearer guidance but also help work out options on the next screen</li>
       <li>Rework of payment schedule screen: <a href="/Set_Up_A_Direct_Debit/v3/DD_plan_this_month">example 1</a>, <a href="/Set_Up_A_Direct_Debit/v3/DD_plan_next_month">example 2</a>, and <a href="/Set_Up_A_Direct_Debit/v3/DD_plan_odd_first_amount">example 3</a> with an odd first payment</li>
+      <li><a href="/Set_Up_A_Direct_Debit/v3/bank_details">Bank details</a> has bank branch removed after referring to HMRC. Is it needed to manually create a Direct Debit though?</li>
       <li>Updated view of payment schedule on <a href="/Set_Up_A_Direct_Debit/v3/check_info_provided">check information screen</a>, which also displays data carried through. Also now carries Direct Debit Guarantee content and some terms of service.</li>
       </ul>
 
