tweaks to view balance online

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -27,7 +27,7 @@
 
       <h3 class="govuk-heading-s">v2</h3>
 
-      <p>Progression of v1 journey</p>
+      <p>Progression of v1 journey, user isn't logged in</p>
 
       <ul class="govuk-list govuk-list--bullet">
         <li>Start page split into two screens: 1. <a href="/Set_Up_A_Direct_Debit/v2/index">An overall Direct Debt page</a> with timescale expectancies for the tax payer; 2. <a href="/Set_Up_A_Direct_Debit/v2/start">A dedicated start page for Set Up A Direct Debit Online</a></li>
@@ -46,7 +46,7 @@
 
       <h3 class="govuk-heading-s">v3</h3>
 
-      <p>Progression of v2 journey, after review with staff</p>
+      <p>Progression of v2 journey, after review with staff. User isn't logged in</p>
 
       <ul class="govuk-list govuk-list--bullet">
         <li>Revision of <a href="/Set_Up_A_Direct_Debit/v2/start">start page</a>, to include more detail on what you need before you start. Also included link to other methods of setting up a Direct Debit.</li>
