--- a/app/views/View_Council_Tax_Balance/v1/balance.html
+++ b/app/views/View_Council_Tax_Balance/v1/balance.html
@@ -24,16 +24,22 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <span class="govuk-caption-l">Set up a Direct Debit</span>
+      <span class="govuk-caption-l">View a council tax balance online</span>
       <h1 class="govuk-heading-xl">
-        Balance for 2021 to 2022 council tax
+        Council tax amount due
       </h1>
 
       <form class="post" method="post" action="your_personal_details">
 
-      <p>
-        Amount still due for the property for the period 6 April 2021 to 5 April 2021<span class="govuk-heading-l">&pound;456</span>
-      </p>
+
+
+                  <div class="govuk-panel govuk-panel--confirmation" style="background: #1d70b8;">
+
+                    <div class="govuk-panel__body">
+                      For 1 November 2020 to 5 April 2021 the amount outstanding is <br /><strong>&pound;480.00</strong>
+                    </div>
+
+                  </div>
 
 
       </form>
