--- a/app/views/Set_Up_A_Direct_Debit/v4/start.html
+++ b/app/views/Set_Up_A_Direct_Debit/v4/start.html
@@ -51,9 +51,10 @@
       </ul>
 
 
+
       {{ govukButton({
         text: "Start now",
-        href: "council_tax_number",
+        href: "confirm_property",
         isStartButton: true
       }) }}
 
