--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,6 +13,19 @@
         Royal Borough of Greenwich
       </h1>
 
+      <h2 class="govuk-heading-m">Council Tax Account Overview</h2>
+
+      <h3 class="govuk-heading-s">v1</h3>
+
+      <p>
+        DRAFT
+      </p>
+
+      <p>
+        <a href="Council_Tax_Account_Overview/v1/index">v1 page</a>
+      </p>
+
+
       <h2 class="govuk-heading-m">Set up Direct Debit</h2>
 
       <h3 class="govuk-heading-s">v1</h3>
@@ -46,17 +59,17 @@
 
       <h3 class="govuk-heading-s">v3</h3>
 
-      <p>Progression of v2 journey, after review with staff. User isn't logged in</p>
+      <p>Progression of v2 journey, after review with staff. User isn't logged in.</p>
 
       <ul class="govuk-list govuk-list--bullet">
-        <li>Revision of <a href="/Set_Up_A_Direct_Debit/v2/start">start page</a>, to include more detail on what you need before you start. Also included link to other methods of setting up a Direct Debit.</li>
+        <li>Revision of <a href="/Set_Up_A_Direct_Debit/v2/start">start page</a>, to include more detail on what you need before you start. Includes info on Direct Debit Guarantee. Also included link to other methods of setting up a Direct Debit.</li>
       <li>Now ask for <a href="/Set_Up_A_Direct_Debit/v3/property_postcode">property postcode<a> to validate access to set up Direct Debit. (You need to enter SE10 1AA to continue.)</li>
       <li>New screen <a href="/Set_Up_A_Direct_Debit/v3/quit_setting_up">stopping setting up a Direct Debit</a>, asking user to check their reference/s and they are entering them correctly. If problem persists directs them to teh council tax team.</li>
       <li>Slight redesign of <a href="/Set_Up_A_Direct_Debit/v3/amount_due">amount due</a>. Also have <a href="/Set_Up_A_Direct_Debit/v3/amount_due_with_arrears">an option for account with arrears</a>, directing the user to contact the council tax office.</li>
       <li><a href="/Set_Up_A_Direct_Debit/v3/communication_preferences">Communication preferences</a> only appears if email address provided</li>
       <li>Payment date is now on <a href="/Set_Up_A_Direct_Debit/v3/DD_date">its own screen</a> to provide clearer guidance but also help work out options on the next screen</li>
       <li>Rework of payment schedule screen: <a href="/Set_Up_A_Direct_Debit/v3/DD_plan_this_month">example 1</a>, <a href="/Set_Up_A_Direct_Debit/v3/DD_plan_next_month">example 2</a>, and <a href="/Set_Up_A_Direct_Debit/v3/DD_plan_odd_first_amount">example 3</a> with an odd first payment</li>
-      <li><a href="/Set_Up_A_Direct_Debit/v3/bank_details">Bank details</a> has bank branch removed after referring to HMRC. Is it needed to manually create a Direct Debit though?</li>
+      <li><a href="/Set_Up_A_Direct_Debit/v3/bank_details">Bank account details</a> has bank branch removed after referring to HMRC. Is it needed to manually create a Direct Debit though?</li>
       <li>Updated view of payment schedule on <a href="/Set_Up_A_Direct_Debit/v3/check_info_provided">check information screen</a>, which also displays data carried through. Also now carries Direct Debit Guarantee content and some terms of service.</li>
       </ul>
 
@@ -64,6 +77,20 @@
         <a href="Set_Up_A_Direct_Debit/v3/index">v3 landing page</a>
       </p>
 
+      <h3 class="govuk-heading-s">v4</h3>
+
+      <p>Copy of v3 journey, but amends because user is logged in.</p>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li>Removed asking for council tax account number and postcode. Now <a href="/Set_Up_A_Direct_Debit/v4/confirm_property">just ask user to confirm property</a> (as should be linked to from account).</li>
+        <li>Don't need to ask user for their name, email address or phone number as we should have collected these on account creation.</li>
+        <li>Still include <a href="/Set_Up_A_Direct_Debit/v4/communication_preferences">the nudge to receive emails</a>.</li>
+        <li>Some fields removed from <a href="/Set_Up_A_Direct_Debit/v4/check_info_provided">the confirm info page</a> as we don't ask it.</li>
+      </ul>
+
+      <p>
+        <a href="Set_Up_A_Direct_Debit/v4/index">v4 landing page</a>
+      </p>
 
 
 
