--- a/app/views/Set_Up_A_Direct_Debit/v4/check_info_provided.html
+++ b/app/views/Set_Up_A_Direct_Debit/v4/check_info_provided.html
@@ -62,44 +62,9 @@
       </div>
       </dl>
 
-      <h2 class="govuk-heading-m">Personal details</h2>
+      <h2 class="govuk-heading-m">Communication preferences</h2>
 
       <dl class="govuk-summary-list govuk-!-margin-bottom-9">
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
-          Your full name
-        </dt>
-        <dd class="govuk-summary-list__value">
-          {{ data['full-name'] }}
-        </dd>
-          <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="your_personal_details">
-                Change<span class="govuk-visually-hidden"> personal details</span>
-            </a>
-          </dd>
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
-          Email address
-        </dt>
-        <dd class="govuk-summary-list__value">
-          {{ data['emailAddress'] }}
-        </dd>
-          <dd class="govuk-summary-list__actions">
-
-          </dd>
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
-          Telephone number
-        </dt>
-        <dd class="govuk-summary-list__value">
-          {{ data['phoneNumber'] }}
-        </dd>
-          <dd class="govuk-summary-list__actions">
-
-          </dd>
-      </div>
 
 <div class="govuk-summary-list__row">
   <dt class="govuk-summary-list__key">
@@ -115,19 +80,7 @@
     </dd>
 </div>
 
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
-          Your address
-        </dt>
-        <dd class="govuk-summary-list__value">
-          {{ data['account-address'] }}
-        </dd>
-          <dd class="govuk-summary-list__actions">
-            <a class="govuk-link" href="your_address_2">
-              Change<span class="govuk-visually-hidden"> your address</span>
-          </a>
-          </dd>
-      </div>
+
     </dl>
 
     <h2 class="govuk-heading-m">Payment schedule</h2>
