--- a/app/views/index.html
+++ b/app/views/index.html
@@ -81,6 +81,10 @@
 
       <p>Copy of v3 journey, but amends because user is logged in.</p>
 
+      <p>
+        To do: "logged in" in header
+      </p>
+
       <ul class="govuk-list govuk-list--bullet">
         <li>Removed asking for council tax account number and postcode. Now <a href="/Set_Up_A_Direct_Debit/v4/confirm_property">just ask user to confirm property</a> (as should be linked to from account).</li>
         <li>Don't need to ask user for their name, email address or phone number as we should have collected these on account creation.</li>
