--- a/app/views/index.html
+++ b/app/views/index.html
@@ -13,6 +13,10 @@
         Royal Borough of Greenwich
       </h1>
 
+      <p>
+        Overall to do: fix header bug when gov.uk appears when uploaded to Heroku
+      </p>
+
       <h2 class="govuk-heading-m">Council Tax Account Overview</h2>
 
       <h3 class="govuk-heading-s">v1</h3>
