--- a/app/views/index.html
+++ b/app/views/index.html
@@ -9,13 +9,34 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+      <span class="govuk-caption-l">Royal Borough of Greenwich</span>
       <h1 class="govuk-heading-xl">
-        Royal Borough of Greenwich
+        Council tax prototypes
       </h1>
 
+      <h2 class="govuk-heading-m">About</h2>
+
       <p>
-        Overall to do: fix header bug when gov.uk appears when uploaded to Heroku
+        Prototypes allow us to test ideas. Unless specified they are not designs that are "approved" and they are not production level code. These are in the first instance experiements, stimulus to test.
       </p>
+
+      <p>
+        These prototypes are created using the <a href="https://govuk-prototype-kit.herokuapp.com/">gov.uk prototype kit</a>, which is used across UK government to test ideas. The kit carries the <a href="https://design-system.service.gov.uk">gov.uk design system</a>, which carries agreed styles, compoents and patterns, developed over the last eight years across government.
+      </p>
+
+      <p>
+        This prototype sits on a platform called Heroku. The repo (the code) is <a href="https://github.com/ermlikeyeah/greenwich-council-tax">stored on GitHub</a>. Any updates to that code automatically upload to Heroku (it takes a couple of minutes).
+      </p>
+
+      <h2 class="govuk-heading-m">Overall to do</h2>
+
+
+      <p>
+        To do: fix header bug when gov.uk appears when uploaded to Heroku
+      </p>
+
+      <hr>
+
 
       <h2 class="govuk-heading-m">Council Tax Account Overview</h2>
 
@@ -29,6 +50,8 @@
         <a href="Council_Tax_Account_Overview/v1/index">v1 page</a>
       </p>
 
+      <hr>
+
 
       <h2 class="govuk-heading-m">Set up Direct Debit</h2>
 
@@ -41,6 +64,7 @@
       <p>
         <a href="Set_Up_A_Direct_Debit/v1/start">v1 start page</a>
       </p>
+
 
       <h3 class="govuk-heading-s">v2</h3>
 
@@ -100,6 +124,7 @@
         <a href="Set_Up_A_Direct_Debit/v4/index">v4 landing page</a>
       </p>
 
+      <hr>
 
 
       <h2 class="govuk-heading-m">View a council tax balance online</h2>
@@ -107,6 +132,8 @@
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="View_Council_Tax_Balance/v1/index">v1 landing page</a></li>
       </ul>
+
+      <hr>
 
 
       <h2 class="govuk-heading-m">Register to use online</h2>
