--- a/app/views/index.html
+++ b/app/views/index.html
@@ -14,7 +14,7 @@
         Council tax prototypes
       </h1>
 
-      <h2 class="govuk-heading-m">About</h2>
+      <h2 class="govuk-heading-m">About this prototype</h2>
 
       <p>
         Prototypes allow us to test ideas. Unless specified they are not designs that are "approved" and they are not production level code. These are in the first instance experiements, stimulus to test.
