--- a/app/views/Register_To_Use_Online/v1/index.html
+++ b/app/views/Register_To_Use_Online/v1/index.html
@@ -5,18 +5,6 @@
   GOV.UK Prototype Kit
 {% endblock %}
 
-{% block beforeContent %}
-
-{{ govukPhaseBanner({
-  tag: {
-    text: "alpha"
-  },
-  html: 'This is a new service – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
-}) }}
-
-{% endblock%}
-
-
 {% block content %}
 
 
@@ -24,7 +12,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">
-        Register to use online services
+        Connect to your online account to your council tax bill
       </h1>
 
 
