Continued implementing overview

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -37,3 +37,21 @@ $govuk-assets-path: '/govuk/assets/';
   margin-bottom: 0;
   border-bottom: 0;
 }
+
+.govuk-button {
+  background-color: #c1002b;
+  box-shadow: 0 2px 0 #87001E;
+}
+
+.govuk-button:hover {
+  background-color: #AE0027;
+  box-shadow: 0 2px 0 #87001E;
+}
+
+
+.DUMP {
+  background-color: #00703c;
+box-shadow: 0 2px 0 #002d18;
+
+
+}
