--- a/app/views/Council_Tax_Account_Overview/v1/index.html
+++ b/app/views/Council_Tax_Account_Overview/v1/index.html
@@ -196,7 +196,7 @@
 
 {{ govukButton({
   text: "Set up a Direct Debit",
-  href: "your_details"
+  href: "/Set_Up_A_Direct_Debit/v4/start"
 }) }}
 
 <p style="margin-top: -16px;">
