--- a/app/views/Council_Tax_Account_Overview/v1/index-dump.html
+++ b/app/views/Council_Tax_Account_Overview/v1/index-dump.html
@@ -6,6 +6,8 @@
 {% endblock %}
 
 
+
+
 {% block content %}
 
 
@@ -192,6 +194,9 @@
   ]
 }) }}
 
+{{govukTag({
+  text: "Paid"
+})}}
 
 {{ govukButton({
   text: "Set up a Direct Debit",
