--- a/app/views/Set_Up_A_Direct_Debit/v3/start.html
+++ b/app/views/Set_Up_A_Direct_Debit/v3/start.html
@@ -31,16 +31,16 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          Your council tax account number, found on any Royal Borough of Greenwich council tax bill
+          Your council tax account number, found on any Royal Borough of Greenwich council tax bill.
         </li>
         <li>
-          Your bank account details. You must be the sole signatory and it must be a UK bank account.
+          Your bank account details. It must be a UK bank account.
         </li>
         <li>
-          Need to know whether you want to pay your council tax for a year in one amount or a number of months
+          To know whether you want to pay your council tax for a year in one amount or a number of installments.
         </li>
         <li>
-          An idea of a day of the month you want your Direct Debit to leave your bank account
+          An idea of a day of the month you want your Direct Debit to leave your bank account.
         </li>
       </ul>
 
