--- a/app/views/Set_Up_A_Direct_Debit/v4/confirmation.html
+++ b/app/views/Set_Up_A_Direct_Debit/v4/confirmation.html
@@ -5,12 +5,7 @@
   GOV.UK Prototype Kit
 {% endblock %}
 
-{% block beforeContent %}
 
-
-
-
-{% endblock %}
 
 {% block content %}
 
@@ -20,8 +15,7 @@
     <div class="govuk-grid-column-two-thirds">
 
           {{ govukPanel({
-            titleText: "Direct debit application has been received and is being processed",
-            html: "Your reference number<br><strong>SA3G9C 241ZN</strong>"
+            titleText: "Direct debit application has been received and is being processed"
           }) }}
 
           <p class="govuk-body">We have sent you a confirmation email.</p>
@@ -29,7 +23,7 @@
           <h2 class="govuk-heading-m">What happens next</h2>
 
           <p class="govuk-body">
-            We will process your application. This can take up to 7 days. When it is set up you will receive confirmation by email.
+            We will process your application. This can take up to 7 days. When it is set up you will receive confirmation through the post.
           </p>
           <p class="govuk-body">
             If we have any questions we will contact you directly.
