--- a/app/views/index.html
+++ b/app/views/index.html
@@ -25,7 +25,7 @@
       </p>
 
       <p>
-        This prototype sits on a platform called Heroku. The repo (the code) is <a href="https://github.com/ermlikeyeah/greenwich-council-tax">stored on GitHub</a>. Any updates to that code automatically upload to Heroku (it takes a couple of minutes).
+        This prototype sits on a hosting platform called Heroku. The repo (the code) is <a href="https://github.com/ermlikeyeah/greenwich-council-tax">stored on GitHub</a>. Any updates to that code automatically upload to Heroku (it takes a couple of minutes).
       </p>
 
       <h2 class="govuk-heading-m">Overall to do</h2>
