--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -68,6 +68,9 @@
   html: 'This is a service we are designing – your <a class="govuk-link" href="#">feedback</a> will help us to improve it.'
 }) }}
 
+<a class="govuk-back-link" href="javascript:history.go(-1)">Back</a>
+
+
 {% endblock%}
 
 {% if useAutoStoreData %}
