--- a/app/views/Set_Up_A_Direct_Debit/v3/DD_plan_next_month.html
+++ b/app/views/Set_Up_A_Direct_Debit/v3/DD_plan_next_month.html
@@ -35,12 +35,12 @@
   },
   items: [
     {
-      value: "Pay £120.00 for each the next 4 months",
-      text: "Pay £120.00 for each the next 4 months"
+      value: "Pay £120.00 for the next 4 months",
+      text: "Pay £120.00 for the next 4 months"
     },
     {
-      value: "Pay £240.00 for each the next 2 months",
-      text: "Pay £240.00 for each the next 2 months"
+      value: "Pay £240.00 for the next 2 months",
+      text: "Pay £240.00 for the next 2 months"
     }
 
   ]
