--- a/app/views/Set_Up_A_Direct_Debit/v4/DD_date.html
+++ b/app/views/Set_Up_A_Direct_Debit/v4/DD_date.html
@@ -5,12 +5,6 @@
   GOV.UK Prototype Kit
 {% endblock %}
 
-{% block beforeContent %}
-
-
-
-  <a class="govuk-back-link" href="/url/of/previous/page">Back</a>
-{% endblock %}
 
 {% block content %}
 
@@ -40,7 +34,7 @@
 
 
 {{ govukInsetText({
-  text: "The date today is 1 November. If the date you provide is after the 10th the first Direct Debit payment will be taken next month."
+  text: "If the date you provide is after the 10th of this month, the first Direct Debit payment will be taken next month."
 }) }}
 
 
