--- a/app/views/Set_Up_A_Direct_Debit/v4/amount_due.html
+++ b/app/views/Set_Up_A_Direct_Debit/v4/amount_due.html
@@ -5,12 +5,6 @@
   GOV.UK Prototype Kit
 {% endblock %}
 
-{% block beforeContent %}
-
-
-
-  <a class="govuk-back-link" href="/url/of/previous/page">Back</a>
-{% endblock %}
 
 {% block content %}
 
@@ -29,13 +23,13 @@
           <div class="govuk-panel govuk-panel--confirmation" style="background: #1d70b8;">
 
             <div class="govuk-panel__body">
-              For 1 November 2020 to 5 April 2021 you need to pay<br /><strong>&pound;480.00</strong>
+              For 5 November 2020 to 5 April 2021 you need to pay<br /><strong>&pound;480.00</strong>
             </div>
 
           </div>
 
           <p>
-            This amount is payable over the remaining months of the [year].
+            This amount is payable over the remaining months of the year.
           </p>
 
 
