--- a/app/views/Set_Up_A_Direct_Debit/v3/your_address_2.html
+++ b/app/views/Set_Up_A_Direct_Debit/v3/your_address_2.html
@@ -5,11 +5,6 @@
   GOV.UK Prototype Kit
 {% endblock %}
 
-{% block beforeContent %}
-
-
-  <a class="govuk-back-link" href="/url/of/previous/page">Back</a>
-{% endblock %}
 
 {% block content %}
 
@@ -22,7 +17,7 @@
         Your address
       </h1>
 
-      <form class="post" method="post" action="DD_plan">
+      <form class="post" method="post" action="DD_date">
 
       <p>
         This is the address your bank account is registered at.
