--- a/app/views/Set_Up_A_Direct_Debit/v4/DD_plan_next_month.html
+++ b/app/views/Set_Up_A_Direct_Debit/v4/DD_plan_next_month.html
@@ -30,12 +30,18 @@
   },
   items: [
     {
-      value: "Pay £120.00 for each the next 4 months",
-      text: "Pay £120.00 for each the next 4 months"
+      value: "Pay £120.00 for the next 4 months",
+      text: "Pay £120.00 for the next 4 months",
+      hint: {
+        text: "Your last payment would be in March"
+      }
     },
     {
-      value: "Pay £240.00 for each the next 2 months",
-      text: "Pay £240.00 for each the next 2 months"
+      value: "Pay £240.00 for the next 2 months",
+      text: "Pay £240.00 for the next 2 months",
+      hint: {
+        text: "Your last payment would be in January"
+      }
     }
 
   ]
