--- a/app/views/Set_Up_A_Direct_Debit/v4/DD_plan_odd_first_amount.html
+++ b/app/views/Set_Up_A_Direct_Debit/v4/DD_plan_odd_first_amount.html
@@ -34,8 +34,8 @@
       text: "Pay £124.56 for the first month, and £120 for the 3 remaining months"
     },
     {
-      value: "Pay £244.56 for the first month, and £240.00 for the remaining month",
-      text: "Pay £244.56 for the first month, and £240.00 for the remaining month"
+      value: "Pay £244.56 for the first month, and £240.00 for the final month",
+      text: "Pay £244.56 for the first month, and £240.00 for the final month"
     }
 
   ]
