--- a/app/views/Set_Up_A_Direct_Debit/v4/your_address_2.html
+++ b/app/views/Set_Up_A_Direct_Debit/v4/your_address_2.html
@@ -17,7 +17,7 @@
         Your address
       </h1>
 
-      <form class="post" method="post" action="DD_plan">
+      <form class="post" method="post" action="DD_date">
 
       <p>
         This is the address your bank account is registered at.
@@ -46,9 +46,6 @@
   ]
 }) }}
 
-
-
-      {% from "govuk/components/button/macro.njk" import govukButton %}
 
       {{ govukButton({
         text: "Continue"
