--- a/app/views/Set_Up_A_Direct_Debit/v4/DD_plan_this_month.html
+++ b/app/views/Set_Up_A_Direct_Debit/v4/DD_plan_this_month.html
@@ -17,7 +17,6 @@
       <form class="post" method="post" action="bank_details">
 
 
-
 {{ govukRadios({
   idPrefix: "payment-plan",
   name: "payment-plan",
@@ -30,12 +29,18 @@
   },
   items: [
     {
-      value: "Pay £96.00 for each the next 5 months",
-      text: "Pay £96.00 for each the next 5 months"
+      value: "Pay £96.00 for the next 5 months",
+      text: "Pay £96.00 for the next 5 months",
+      hint: {
+        text: "Your last payment would be in March"
+      }
     },
     {
-      value: "Pay £160.00 for each the next 3 months",
-      text: "Pay £160.00 for each the next 3 months"
+      value: "Pay £160.00 for the next 3 months",
+      text: "Pay £160.00 for the next 3 months",
+      hint: {
+        text: "Your last payment would be in January"
+      }
     }
 
   ]
