Overview with DD set up

--- a/app/views/Council_Tax_Account_Overview/v1/index-dd-set-up.html
+++ b/app/views/Council_Tax_Account_Overview/v1/index-dd-set-up.html
@@ -88,6 +88,15 @@
       </div>
       </dl>
 
+      <div class="govuk-panel govuk-panel--confirmation" style="background: #1d70b8;">
+
+        <div class="govuk-panel__body" style="font-size: 20px;">
+          Your Council Tax is being paid monthly by Direct Debit
+        </div>
+
+      </div>
+
+
 {{ govukTable({
   caption: "Monthly payments for 2020/21",
   firstCellIsHeader: true,
@@ -137,13 +146,9 @@
 }) }}
 
 
-{{ govukButton({
-  text: "Set up a Direct Debit",
-  href: "/Set_Up_A_Direct_Debit/v4/start"
-}) }}
 
 <p style="margin-top: -16px;">
-<a href="#">Other ways to pay</a>
+  <a href="#">Amend Direct Debit</a>
 </p>
 
 
