--- a/app/views/Set_Up_A_Direct_Debit/v4/confirmation.html
+++ b/app/views/Set_Up_A_Direct_Debit/v4/confirmation.html
@@ -30,6 +30,14 @@
           </p>
 
           <p class="govuk-body">
+            <a href="../../Council_Tax_Account_Overview/v1/index-dd-set-up">View your Direct Debit overview</a>
+          </p>
+
+          <p>
+            &nbsp;
+          </p>
+
+          <p class="govuk-body">
             <a href="#" class="govuk-link">What did you think of this service?</a> (takes 30 seconds)
           </p>
 
