--- a/app/views/Council_Tax_Account_Overview/v1/index-dd-set-up.html
+++ b/app/views/Council_Tax_Account_Overview/v1/index-dd-set-up.html
@@ -88,7 +88,7 @@
       </div>
       </dl>
 
-      <div class="govuk-panel govuk-panel--confirmation" style="background: #1d70b8;">
+      <div class="govuk-panel govuk-panel--confirmation">
 
         <div class="govuk-panel__body" style="font-size: 20px;">
           Your Council Tax is being paid monthly by Direct Debit
