--- a/app/views/Set_Up_A_Direct_Debit/v4/DD_plan_next_month.html
+++ b/app/views/Set_Up_A_Direct_Debit/v4/DD_plan_next_month.html
@@ -33,14 +33,14 @@
       value: "Pay £120.00 for the next 4 months",
       text: "Pay £120.00 for the next 4 months",
       hint: {
-        text: "Your last payment would be in March"
+        text: "Your last payment would be in March 2021"
       }
     },
     {
       value: "Pay £240.00 for the next 2 months",
       text: "Pay £240.00 for the next 2 months",
       hint: {
-        text: "Your last payment would be in January"
+        text: "Your last payment would be in January 2021"
       }
     }
 
