--- a/app/views/Set_Up_A_Direct_Debit/v4/DD_plan_this_month.html
+++ b/app/views/Set_Up_A_Direct_Debit/v4/DD_plan_this_month.html
@@ -32,14 +32,14 @@
       value: "Pay £96.00 for the next 5 months",
       text: "Pay £96.00 for the next 5 months",
       hint: {
-        text: "Your last payment would be in March"
+        text: "Your last payment would be in March 2021"
       }
     },
     {
       value: "Pay £160.00 for the next 3 months",
       text: "Pay £160.00 for the next 3 months",
       hint: {
-        text: "Your last payment would be in January"
+        text: "Your last payment would be in January 2021"
       }
     }
 
