new page and missing field to bank details
added in greenwich's detail page about paying
added in building society roll number field

--- a/app/views/Set_Up_A_Direct_Debit/v3/DD_plan_odd_first_amount.html
+++ b/app/views/Set_Up_A_Direct_Debit/v3/DD_plan_odd_first_amount.html
@@ -37,11 +37,17 @@
   items: [
     {
       value: "Pay £124.56 for the first month, and £120.00 for the 3 remaining months",
-      text: "Pay £124.56 for the first month, and £120 for the 3 remaining months"
+      text: "Pay £124.56 for the first month, and £120 for the 3 remaining months",
+      hint: {
+        text: "Your last payment would be in March 2021"
+      }
     },
     {
-      value: "Pay £244.56 for the first month, and £240.00 for the remaining month",
-      text: "Pay £244.56 for the first month, and £240.00 for the remaining month"
+      value: "Pay £244.56 for the first month, and £240.00 for the final month",
+      text: "Pay £244.56 for the first month, and £240.00 for the final month",
+      hint: {
+        text: "Your last payment would be in January 2021"
+      }
     }
 
   ]
