--- a/app/views/Set_Up_A_Direct_Debit/v3/DD_plan_this_month.html
+++ b/app/views/Set_Up_A_Direct_Debit/v3/DD_plan_this_month.html
@@ -35,12 +35,18 @@
   },
   items: [
     {
-      value: "Pay £96.00 for each the next 5 months",
-      text: "Pay £96.00 for each the next 5 months"
+      value: "Pay £96.00 for the next 5 months",
+      text: "Pay £96.00 for the next 5 months",
+      hint: {
+        text: "Your last payment would be in March 2021"
+      }
     },
     {
-      value: "Pay £160.00 for each the next 3 months",
-      text: "Pay £160.00 for each the next 3 months"
+      value: "Pay £160.00 for the next 3 months",
+      text: "Pay £160.00 for the next 3 months",
+      hint: {
+        text: "Your last payment would be in January 2021"
+      }
     }
 
   ]
