--- a/app/views/Set_Up_A_Direct_Debit/v3/amount_due.html
+++ b/app/views/Set_Up_A_Direct_Debit/v3/amount_due.html
@@ -34,7 +34,7 @@
           </div>
 
           <p>
-            This amount is payable over the remaining months of the [year].
+            This amount is payable over the remaining months of the year.
           </p>
 
 
