--- a/app/views/Set_Up_A_Direct_Debit/v3/bank_details.html
+++ b/app/views/Set_Up_A_Direct_Debit/v3/bank_details.html
@@ -67,6 +67,18 @@
         name: "bank-name"
       }) }}
 
+      {{ govukInput({
+        label: {
+          text: "Building society roll number (if you have one)"
+        },
+        classes: "govuk-input--width-10",
+        hint: {
+          text: "You can find it on your card, statement or passbook"
+        },
+        id: "roll-number",
+        name: "roll-number",
+        spellcheck: false
+      }) }}
 
       {{ govukButton({
         text: "Continue"
