--- a/app/views/index.html
+++ b/app/views/index.html
@@ -38,6 +38,21 @@
       <hr>
 
 
+            <h2 class="govuk-heading-m">Demo council tax content pages</h2>
+
+            <h3 class="govuk-heading-s">v1</h3>
+
+            <p>
+              A grab of the <a href="https://www.royalgreenwich.gov.uk/info/200254/paying_council_tax/463/how_to_pay_your_council_tax">corresponding page</a> on the existing Greenwich website to help with prototype journeys.
+            </p>
+
+            <p>
+              <a href="Information_Pages/v1/index">v1 paying council tax info page, logged out</a> (clicking 'set up Direct Debit' goes to v3)
+            </p>
+
+            <hr>
+
+
       <h2 class="govuk-heading-m">Council Tax Account Overview</h2>
 
       <h3 class="govuk-heading-s">v1</h3>
