--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -44,9 +44,9 @@
     <div class="govuk-header__container govuk-width-container">
       <div class="govuk-header__logo">
         <a href="/" class="govuk-header__link govuk-header__link--homepage">
-          <span class="govuk-header__logotype">
+          <span class="govuk-header__logotype"><span style="font-size:20px;">Royal Borough of Greenwich</span>
             <span class="govuk-header__logotype-text">
-              Royal Borough of Greenwich {{ serviceName }}
+             {{ serviceName }}
             </span>
           </span>
         </a>
