--- a/app/views/index.html
+++ b/app/views/index.html
@@ -58,12 +58,17 @@
       <h3 class="govuk-heading-s">v1</h3>
 
       <p>
-        DRAFT
+        Initial draft based on Emyr's visuals.
       </p>
 
       <p>
-        <a href="Council_Tax_Account_Overview/v1/index">v1 page</a>
+        <a href="Council_Tax_Account_Overview/v1/index">No Direct Debit set up</a>
       </p>
+
+      <p>
+        <a href="Council_Tax_Account_Overview/v1/index-dd-set-up">Direct Debit set up</a>
+      </p>
+
 
       <hr>
 
