--- a/app/views/Council_Tax_Account_Overview/v1/index.html
+++ b/app/views/Council_Tax_Account_Overview/v1/index.html
@@ -143,7 +143,7 @@
 }) }}
 
 <p style="margin-top: -16px;">
-<a href="#">Other ways to pay</a>
+<a href="../../Information_Pages/v1/index">Other ways to pay</a>
 </p>
 
 
