--- a/app/views/Council_Tax_Account_Overview/v1/index-dd-set-up-with-payments-made.html
+++ b/app/views/Council_Tax_Account_Overview/v1/index-dd-set-up-with-payments-made.html
@@ -6,8 +6,6 @@
 {% endblock %}
 
 
-
-
 {% block content %}
 
 
@@ -69,7 +67,7 @@
           Total for year 2020 to 2021
         </dt>
         <dd class="govuk-summary-list__value">
-          £1,200.00
+          £480.00
         </dd>
       </div>
       <div class="govuk-summary-list__row">
@@ -77,7 +75,7 @@
           Amount already paid
         </dt>
         <dd class="govuk-summary-list__value">
-          £0.00
+          £160.00
         </dd>
       </div>
       <div class="govuk-summary-list__row">
@@ -85,122 +83,120 @@
           <span class="govuk-heading-m" style="margin-bottom: 0;">Total left to pay</span>
         </dt>
         <dd class="govuk-summary-list__value">
-          <span class="govuk-heading-m">£1,200.00</span>
+          <span class="govuk-heading-m">£320.00</span>
         </dd>
       </div>
       </dl>
 
-{{ govukTable({
-  caption: "Monthly payments for 2020/21",
-  firstCellIsHeader: true,
-  head: [
-    {
-      text: "Due date"
-    },
-    {
-      text: "Amount"
-    }
-  ],
-  rows: [
-    [
-      {
-        text: "15 Apr 2020"
-      },
-      {
-        text: "£120.00"
-      }
-    ],
-    [
-      {
-        text: "15 May 2020"
-      },
-      {
-        text: "£120.00"
-      }
-    ],
-    [
-      {
-        text: "15 Jun 2020"
-      },
-      {
-        text: "£120.00"
-      }
-    ],
-    [
-      {
-        text: "15 Jul 2020"
-      },
-      {
-        text: "£120.00"
-      }
-    ],
-    [
-      {
-        text: "15 Aug 2020"
-      },
-      {
-        text: "£120.00"
-      }
-    ],
-    [
-      {
-        text: "15 Sep 2020"
-      },
-      {
-        text: "£120.00"
-      }
-    ],
-    [
-      {
-        text: "15 Oct 2020"
-      },
-      {
-        text: "£120.00"
-      }
-    ],
-    [
-      {
-        text: "15 Nov 2020"
-      },
-      {
-        text: "£120.00"
-      }
-    ],
-    [
-      {
-        text: "15 Dec 2020"
-      },
-      {
-        text: "£120.00"
-      }
-    ],
-    [
-      {
-        text: "15 Jan 2021"
-      },
-      {
-        text: "£120.00"
-      }
-    ],
-    [
-      {
-        text: "Total for year 2020/2021"
-      },
-      {
-        text: "£1,200.00"
-      }
-    ]
+      <div class="govuk-panel govuk-panel--confirmation">
 
-  ]
-}) }}
+        <div class="govuk-panel__body" style="font-size: 20px;">
+          Your Council Tax is being paid monthly by Direct Debit
+        </div>
 
-{{ govukButton({
-  text: "Set up a Direct Debit",
-  href: "/Set_Up_A_Direct_Debit/v4/start"
-}) }}
+      </div>
+
+      <table class="govuk-table">
+
+        <caption class="govuk-table__caption">Monthly payments for 2020/21</caption>
+
+
+        <thead class="govuk-table__head">
+          <tr class="govuk-table__row">
+
+            <th scope="col" class="govuk-table__header">Due date</th>
+
+            <th scope="col" class="govuk-table__header">Amount</th>
+
+          </tr>
+        </thead>
+
+        <tbody class="govuk-table__body">
+
+
+              <tr class="govuk-table__row">
+
+
+
+                <th scope="row" class="govuk-table__header"
+                >15 Nov 2020</th>
+
+
+
+
+                <td class="govuk-table__cell"
+                >£160.00 {{govukTag({
+                  text: "Paid"
+                })}}</td>
+
+
+              </tr>
+
+
+
+              <tr class="govuk-table__row">
+
+
+
+                <th scope="row" class="govuk-table__header"
+                >15 Dec 2020</th>
+
+
+
+
+                <td class="govuk-table__cell">{{govukTag({
+                  text: "Paid"
+                })}} £160.00</td>
+
+
+              </tr>
+
+
+
+              <tr class="govuk-table__row">
+
+
+
+                <th scope="row" class="govuk-table__header"
+                >15 Jan 2021 {{govukTag({
+                  text: "Paid"
+                })}}</th>
+
+
+
+
+                <td class="govuk-table__cell"
+                >£160.00</td>
+
+
+              </tr>
+
+
+
+              <tr class="govuk-table__row">
+
+
+
+                <th scope="row" class="govuk-table__header"
+                >Total for year 2020/2021</th>
+
+
+
+
+                <td class="govuk-table__cell"
+                >£480.00</td>
+
+
+              </tr>
+
+
+        </tbody>
+      </table>
+
+
 
 <p style="margin-top: -16px;">
-<a href="#">Other ways to pay</a>
+  <a href="#">Amend Direct Debit</a>
 </p>
 
 
