--- a/app/views/index.html
+++ b/app/views/index.html
@@ -32,7 +32,9 @@
 
 
       <p>
-        To do: fix header bug when gov.uk appears when uploaded to Heroku
+        Remove `back` from this index page (low)<br>
+        More Greenwich header (medium)<br>
+        More Greenwich footer (medium)
       </p>
 
       <hr>
